--- a/css/popup-paper.css
+++ b/css/popup-paper.css
@@ -33,7 +33,7 @@ Paper Theme
     border: 2px solid #BCBCBC !important;
     border-radius: 8px 8px 8px 8px;
     box-shadow: 0 0 15px #878787;
-    z-index: 99999999999;
+    z-index: 2147483647;
 }
 
 #liuchan-window .liuchan-container {
@@ -122,7 +122,7 @@ Paper Theme
 			" textarea textarea textarea";
 	grid-gap: 3px;
 	position: fixed;
-	z-index: 99999999998;
+	z-index: 2147483646;
 	text-align: center;
 	width: fit-content;
 	height: auto;
